--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ definitions are likely to differ between domains.
 
 The <dfn data-lt="first parties">first party</dfn> is a [=party=] with which a [=person=] intends to
 interact. Merely hovering over, muting, pausing, or closing a given piece of content does
-not constitute a [=person=]'s intent to interact with another party, nor does the simple
+not mean a [=person=] intends to interact with another party, nor does the simple
 fact of loading a [=party=] embedded in the one with which the person intends to
 interact. In cases of clear and conspicuous joint branding, there can be multiple [=first
 parties=]. The [=first party=] is necessarily a [=data controller=] of the data processing
