simplified from 'interacting with' to 'visiting'

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@ interact. In cases of clear and conspicuous joint branding, there can be multipl
 parties=]. The [=first party=] is necessarily a [=data controller=] of the data processing
 that takes places as a consequence of a [=person=] interacting with it.
 
-A <dfn data-lt="third parties">third party</dfn> is any [=party=] other than the [=person=],
+A <dfn data-lt="third parties">third party</dfn> is any [=party=] other than the [=person=] visiting the website,
 the [=first party=], or a [=service provider=] acting on behalf of either the [=person=] or
 the [=first party=].
 
