--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@ work as is more respectable.
 
 ## User Agents {#user-agents}
 
-The <dfn>user agent</dfn> acts as an intermediary between a [=person=] ([=user=]) and the web. The
+The <dfn>user agent</dfn> acts as an intermediary between a [=person=] (its [=user=]) and the web. The
 [=user agent=] is <em>not</em> a [=context=] because it is expected to align fully with the
 [=person=] using it and operate exclusively in that [=person=]'s interest. It is <em>not</em> the
 [=first party=]. The [=user agent=] serves the [=person=] as a <dfn>trustworthy agent</dfn>:
