--- a/index.html
+++ b/index.html
@@ -485,12 +485,12 @@ The <dfn>user agent</dfn> acts as an intermediary between a [=person=] (its [=us
 [=user agent=] is <em>not</em> a [=context=] because it is expected to align fully with the
 [=person=] using it and operate exclusively in that [=person=]'s interest. It is <em>not</em> the
 [=first party=]. The [=user agent=] serves the [=person=] as a <dfn>trustworthy agent</dfn>:
-it always puts the [=person=]'s interest first. In some occasions, this can mean protecting
-the [=person=] from themselves by preventing them from carrying out a dangerous decision,
+it always puts that [=person=]'s interest first. In some occasions, this can mean protecting
+that [=person=] from themselves by preventing them from carrying out a dangerous decision,
 or by slowing down the person in their decision. For example, the
-[=user agent=] will make it difficult for the [=person=] to connect to a site if it can't verify
-that the site is authentic. It will check that the [=person=] really intends to expose a
-sensitive device to a page. It will prevent the [=person=] from consenting to the permanent
+[=user agent=] will make it difficult for that [=person=] to connect to a site if it can't verify
+that the site is authentic. It will check that that [=person=] really intends to expose a
+sensitive device to a page. It will prevent that [=person=] from consenting to the permanent
 monitoring of their behaviour. Its <dfn>user agent duties</dfn> include
 [[?TAKING-TRUST-SERIOUSLY]]:
 
