acceptable use of user
Co-authored-by: Robin Berjon <robin@berjon.com>

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@ monitoring of their behaviour. Its <dfn>user agent duties</dfn> include
 <dl>
   <dt><dfn>Duty of Protection</dfn></dt>
   <dd>
-    Protection requires [=user agents=] to actively protect a [=person=]'s data, beyond
+    Protection requires [=user agents=] to actively protect their [=user=]'s data, beyond
     simple security measures. It is insufficient to just encrypt at rest and in transit,
     but the [=user agent=] must also limit retention, help ensure that only strictly
     necessary data is collected, and require guarantees from any [=party=] that the user agent can reasonably be aware that it is shared to.
