--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@ monitoring of their behaviour. Its <dfn>user agent duties</dfn> include
   </dd>
 </dl>
 
-These duties ensure the [=user agent=] will <em>care</em> for the [=person=] ([=user=]). It is important to
+These duties ensure the [=user agent=] will <em>care</em> for its [=user=]. It is important to
 note that there is a subtle difference between care and <dfn>data paternalism</dfn>.
 [=Data paternalism=] claims to help in part by removing agency ("<em>don't worry about it,
 so long as your data is with us it's safe, you don't need to know what we do with it, it's
