--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@ monitoring of their behaviour. Its <dfn>user agent duties</dfn> include
   </dd>
   <dt><dfn>Duty of Honesty</dfn></dt>
   <dd>
-    Honesty requires that the [=user agent=] try to give the [=person=]
+    Honesty requires that the [=user agent=] try to give its [=user=]
     information of which the [=user agent=] can reasonably be aware, that is relevant to 
     the [=person=] and that will increase the [=person=]'s
     autonomy, as long as they can understand it and there's an appropriate
