--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@ monitoring of their behaviour. Its <dfn>user agent duties</dfn> include
   <dd>
     Honesty requires that the [=user agent=] try to give its [=user=]
     information of which the [=user agent=] can reasonably be aware, that is relevant to 
-    the [=person=] and that will increase the [=person=]'s
+   them and that will increase their
     autonomy, as long as they can understand it and there's an appropriate
     time. This is almost never when the [=person=] is trying to do something else such as
     read a page or activate a feature. The duty of honesty goes well beyond that of
