--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@ their [=data=] is being [=processed=] are referred to as <dfn data-lt="opt in">o
 When deployed thoughtfully, these mechanisms can enhance [=people=]'s [=autonomy=]. Often,
 however, they are used as a way to avoid putting in the difficult work of deciding which
 types of [=processing=] are [=appropriate=] and which are not, offloading [=privacy labour=]
-to people using a system.
+to the people using a system.
 
 Privacy regulatory regimes are often anchored at extremes: either they default to allowing
 only very few strictly essential [=purposes=] such that many [=parties=] will have to
