--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@ three privacy tiers:
     the [=Vegas Rule=] and more in line with respecting [=privacy=]). This default tier
     should also be defined differently for certain kinds of [=contexts=]. The legitimate
     [=processing=] that can take place in this tier derives its legitimacy from matching the
-    expectations and interests of both the [=person=] and the [=first party=] in their
+    expectations and interests of both the [=person=] and the [=first party=] they're interacting with
     relationship, as guided by the applicable [=norms=]. If the [=first party=] has knowledge
     of the person's [=identity=], it should make the [=identity=] it is using for the person, 
     along with its own branding as the [=data controller], obvious to the person. 
