--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@ three privacy tiers:
     of permissions on the Web platform. In the same way that it should be clear when a given
     device capability is in use (eg. you are providing geolocation or camera access), sharing
     data under this tier should be set up in such a way that it requires deliberate, specific
-    action from a [=person=] (eg. triggering a form control) and if that [=consent=] is
+    action from the [=person=] (eg. triggering a form control) and if that [=consent=] is
     persistent, there should be an indicator that data is being transmitted shown at all
     times, in such a way that a person can easily switch it off. In general, providing
     [=consent=] should be rare, difficult, highly intentional, and temporary.
