--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@ three privacy tiers:
     data under this tier should be set up in such a way that it requires deliberate, specific
     action from the [=person=] (eg. triggering a form control) and if that [=consent=] is
     persistent, there should be an indicator that data is being transmitted shown at all
-    times, in such a way that a person can easily switch it off. In general, providing
+    times, in such a way that the person can easily switch it off. In general, providing
     [=consent=] should be rare, difficult, highly intentional, and temporary.
   </dd>
 </dl>
