--- a/index.html
+++ b/index.html
@@ -967,7 +967,7 @@ The web platform offers many ways for a website to recognize that a [=person=] i
 sites to save the [=person=]'s preferences, shopping carts, etc., and people have come to expect this
 behavior in some contexts.
 
-A privacy harm occurs if the [=person=] reasonably expects that they'll be using a different [=identity=]
+A privacy harm occurs if a [=person=] reasonably expects that they'll be using a different [=identity=]
 on a site, but the site discovers and uses the fact that the two or more visits probably came from
 the same [=person=] anyway.
 
