--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@ the same [=person=] anyway.
 
 [=User agents=] can't, in general, determine exactly where intra-site [=context=] boundaries are, or
 how a site allows a [=person=] to express that they intend to change [=identities=], so they're not
-responsible to enforce that sites actually separate [=person=] [=identities=] at those boundaries. The <a
+responsible to enforce that sites actually separate [=identities=] at those boundaries. The <a
 href="#principle-prevent-cross-partition-recognition">principle</a> here instead requires separation
 at [=partition=] boundaries.
 
