--- a/index.html
+++ b/index.html
@@ -1117,7 +1117,7 @@ intrusive for a site to
 * Occupy the full screen,
 * etc.
 
-if the person using it doesn't intend for it to do so.
+if the person browsing it doesn't intend for it to do so.
 
 ## Powerful capabilities {#hl-capabilities}
 
