Say that the Vegas principle is neither necessary nor sufficient.

--- a/index.html
+++ b/index.html
@@ -402,13 +402,13 @@ A <dfn>service provider</dfn> or <dfn>data processor</dfn> is considered to be t
 A <dfn>data controller</dfn> is a [=party=] that determines the [=means=] and [=purposes=]
 of data processing. Any [=party=] that is not a [=service provider=] is a [=data controller=].
 
-The <dfn>Vegas Rule</dfn> is a simple implementation of privacy in which "<em>what happens
-with the [=first party=] stays with the [=first party=]</em>." Put differently, it
-describes a situation in which the [=first party=] is the only [=data controller=]. Note
-that, while enforcing the [=Vegas Rule=] provides a rule of thumb describing a necessary
-baseline for [=appropriate=] [=data processing=], it is not always sufficient to guarantee
-[=appropriate=] [=processing=] since the [=first party=] can [=process=] data
-[=inappropriately=].
+The <dfn>Vegas Rule</dfn> is a simple implementation of privacy in which "<em>what happens with the
+[=first party=] stays with the [=first party=]</em>." Put differently, it describes a situation in
+which the [=first party=] is the only [=data controller=]. While the [=Vegas Rule=] is a good
+guideline, it's neither necessary nor sufficient for [=appropriate=] [=data processing=]. A [=first
+party=] that maintains exclusive access to a person's data can still [=process=] it
+[=inappropriately=], and there are cases where a third party can learn information about a person
+but still treat it [=appropriately=].
 
 # Acting on Data {#acting-on-data}
 
