--- a/index.html
+++ b/index.html
@@ -1123,7 +1123,7 @@ if the person browsing it doesn't intend for it to do so.
 
 Contributes to [=misattribution=].
 
-For example, a site that sends SMS without someone's intent could cause them to
+For example, a site that sends SMS without the user's intent could cause them to
 be blamed for things they didn't intend.
 
 
