--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@ people need. For example, some user agents may help people present different
 
 There is disagreement about whether [=user agents=] may also widen their [=machine-enforceable
 contexts=]. For example, some user agents might want to help their users present a single
-[=identity=] to multiple [=sites=] that people understand represent a single [=party=], or to a
+[=identity=] to multiple [=sites=] that the user understands represent a single [=party=], or to a
 [=site=] across multiple installations.
 
 </div>
