--- a/index.html
+++ b/index.html
@@ -403,8 +403,8 @@ A <dfn>data controller</dfn> is a [=party=] that determines the [=means=] and [=
 of data processing. Any [=party=] that is not a [=service provider=] is a [=data controller=].
 
 The <dfn>Vegas Rule</dfn> is a simple implementation of privacy in which "<em>what happens with the
-[=first party=] stays with the [=first party=]</em>." Put differently, it describes a situation in
-which the [=first party=] is the only [=data controller=]. While the [=Vegas Rule=] is a good
+[=first party=] stays with the [=first party=]</em>." Put differently, the [=Vegas Rule=] is followed
+when the [=first party=] is the only [=data controller=]. While the [=Vegas Rule=] is a good
 guideline, it's neither necessary nor sufficient for [=appropriate=] [=data processing=]. A [=first
 party=] that maintains exclusive access to a person's data can still [=process=] it
 [=inappropriately=], and there are cases where a third party can learn information about a person
