Allow UA behavior that only indirectly benefits the user.
In particular, crash reporting, use counters, and similar telemetry only
benefit users in aggregate, which doesn't satisfy the original wording here.

--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@ monitoring of their behaviour. Its <dfn>user agent duties</dfn> include
   <dd>
     Because the [=user agent=] is a [=trustworthy agent=], it is held to be loyal to the
     [=person=] using it in all situations, including in preference to the [=user agent=]'s implementer.
-    When a [=user agent=] carries out [=processing=] that is not directly in the [=person=]'s
+    When a [=user agent=] carries out [=processing=] that is not in the [=person=]'s
     interest but instead benefits another entity (such as the user agent's implementer) that behaviour is
     known as <dfn>self-dealing</dfn>. Behaviour can be [=self-dealing=] even if it is done at the
     same time as [=processing=] that is in the [=person=]'s interest. [=Self-dealing=] is always
