Say that careful cross-context data sharing can be appropriate.

--- a/index.html
+++ b/index.html
@@ -473,16 +473,19 @@ We define <dfn>privacy</dfn> as a right to [=appropriate=] [=data processing=]. 
 
 Note that a [=first party=] can be comprised of multiple [=contexts=] if it is large
 enough that [=people=] would interact with it for more than one [=purpose=]. [=Sharing=]
-[=personal data=] across [=contexts=] is, in the overwhelming majority of cases,
-[=inappropriate=].
+[=personal data=] across [=contexts=] is only [=appropriate=] if the subsequent
+use of that data follows the [=norms=] of the context in which the data was collected.
 
 <div class="example">
 
 Your cute little pup uses <em>Poodle Naps</em> to find comfortable places to snooze,
 and <em>Poodle Fetch</em> to locate the best sticks. Napping and fetching are different
 [=contexts=] with different norms, and sharing data between these contexts is a
-[=privacy violation=] despite the shared ownership of <em>Naps</em> and <em>Fetch</em>
-by the <em>Poodle</em> conglomerate.
+[=privacy violation=] if data collected while napping is used in a way that violates
+napping norms or data collected while fetching is used in a way that violates fetching
+norms. That's true even though <em>Naps</em> and <em>Fetch</em> are both owned by the
+<em>Poodle</em> conglomerate, and even if the data use follows the norms of the context
+in which it's used.
 
 </div>
 
