--- a/index.html
+++ b/index.html
@@ -1125,24 +1125,24 @@ For example, a site that sends SMS without the user's intent could cause them to
 be blamed for things they didn't intend.
 
 <section class="appendix">
-  <h1>Acknowledgements</h1>
-  <p>
-    Some of the definitions in this document build on top of the work in
-    <em>Tracking Preference Expression (DNT)</em> [[tracking-dnt]].
-  </p>
-  <p>
-    The following people, in alphabetical order of their first name, were instrumental
-    in producing this document:
-    Amy Guy,
-    Christine Runnegar,
-    Dan Appelquist,
-    Don Marti,
-    Jonathan Kingston,
-    Peter Snyder,
-    Sam Weiler,
-    Tess O'Connor, and
-    Wendy Seltzer.
-  </p>
+
+# Acknowledgements {#acknowledgements}
+
+Some of the definitions in this document build on top of the work in
+<em>Tracking Preference Expression (DNT)</em> [[tracking-dnt]].
+
+The following people, in alphabetical order of their first name, were instrumental
+in producing this document:
+Amy Guy,
+Christine Runnegar,
+Dan Appelquist,
+Don Marti,
+Jonathan Kingston,
+Peter Snyder,
+Sam Weiler,
+Tess O'Connor, and
+Wendy Seltzer.
+
 </section>
 
 </body>
