missing conflict and Jeff's change

--- a/index.html
+++ b/index.html
@@ -606,11 +606,7 @@ share data between the contexts, the fact that those distinct [=contexts=] fall 
 [=machine-enforceable context=] doesn't make sharing data or [=cross-context
 recognition|recognizing=] [=identities=] any less [=inappropriate=].
 
-<<<<<<< HEAD
-# User Control and Autonomy {#autonomy}
-=======
 ## Personal Control and Autonomy {#autonomy}
->>>>>>> main
 
 A [=person=]'s <dfn data-lt="autonomous">autonomy</dfn> is their ability to make decisions of their own volition,
 without undue influence from other parties. People have limited intellectual resources and
@@ -1129,7 +1125,7 @@ be blamed for things they didn't intend.
 # Acknowledgements {#acknowledgements}
 
 Some of the definitions in this document build on top of the work in
-<em>Tracking Preference Expression (DNT)</em> [[tracking-dnt]].
+[[[tracking-dnt]]].
 
 The following people, in alphabetical order of their first name, were instrumental
 in producing this document:
