simplify definition of personal data, including examples of identifiers

--- a/index.html
+++ b/index.html
@@ -293,7 +293,16 @@ person. Throughout this document, we primarily use [=person=] or [=people=] to r
 reminder of their humanity. When we use the term [=user=], it is to talk about the specific [=person=]
 who happens to be using a given system at that time.
 
-We define <dfn data-lt="data">personal data</dfn> as any information relating to a [=person=] such
+
+in particular by reference to an identifier such as a name, an identification number, location data, an online identifier or to one or more factors specific to the physical, physiological, genetic, mental, economic, cultural or social identity of that natural person;
+
+We define <dfn data-lt="data">personal data</dfn> as any information relating to a [=person=],
+identified or identifiable, directly or indirectly, in particular by reference to an [=identifier=].
+
+
+
+
+ such
 that:
 
 * this [=person=] is identified, directly or indirectly, by reference to an
@@ -585,7 +594,9 @@ as recognising them in different [=contexts=] may force their vulnerability into
 
 In computer systems and on the Web, an [=identity=] seen by a particular website is typically
 assigned an <dfn>identifier</dfn> of some type, which makes it easier for an automated system to
-store data about that [=person=].
+store data about that [=person=]. Examples of [=identifiers=] for a [=person=] include their name,
+an identification number, location data, an online identifier or to one or more factors specific to
+their physical, physiological, genetic, mental, economic, cultural, or social [=identity=].
 
 <div class="practice">
 
