Require following both sets of norms.

--- a/index.html
+++ b/index.html
@@ -474,18 +474,18 @@ We define <dfn>privacy</dfn> as a right to [=appropriate=] [=data processing=]. 
 Note that a [=first party=] can be comprised of multiple [=contexts=] if it is large
 enough that [=people=] would interact with it for more than one [=purpose=]. [=Sharing=]
 [=personal data=] across [=contexts=] is only [=appropriate=] if the subsequent
-use of that data follows the [=norms=] of the context in which the data was collected.
+use of that data follows the [=norms=] of both the context in which the data was
+collected and the context in which it is used.
 
 <div class="example">
 
 Your cute little pup uses <em>Poodle Naps</em> to find comfortable places to snooze,
 and <em>Poodle Fetch</em> to locate the best sticks. Napping and fetching are different
 [=contexts=] with different norms, and sharing data between these contexts is a
-[=privacy violation=] if data collected while napping is used in a way that violates
-napping norms or data collected while fetching is used in a way that violates fetching
-norms. That's true even though <em>Naps</em> and <em>Fetch</em> are both owned by the
-<em>Poodle</em> conglomerate, and even if the data use follows the norms of the context
-in which it's used.
+[=privacy violation=] if data shared between napping and fetching is used in a way that
+violates either the napping or fetching norms. That's true even though <em>Naps</em> and
+<em>Fetch</em> are both owned by the <em>Poodle</em> conglomerate, and even if the data
+use follows the norms of just one of the contexts.
 
 </div>
 
