--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ person. Throughout this document, we primarily use [=person=] or [=people=] to r
 reminder of their humanity. When we use the term [=user=], it is to talk about the specific [=person=]
 who happens to be using a given system at that time.
 
-We define <dfn data-lt="data">personal data</dfn> as any information relating to a [=person=],
+We define <dfn data-lt="data">personal data</dfn> as any information about a [=person=],
 identified or identifiable, directly or indirectly, in particular by reference to an [=identifier=].
 
 [=Data=] is personal if this [=person=] could reasonably be reidentified from a conjunction of this
