--- a/index.html
+++ b/index.html
@@ -349,9 +349,9 @@ cases, typical controls would include making sure that
 Note that [=pseudonymity=], on its own, is not sufficient to render [=data processing=]
 [=appropriate=].
 
-A <dfn data-lt="vulnerable">vulnerable person</dfn> is a [=person=] who may be unable
-to exercise sufficient self-determination in the [=context=] of a specific kind of
-[=processing=]. Amongst other things, they should be treated with greater default
+A <dfn data-lt="vulnerable">vulnerable person</dfn>, in the [=context=] of a specific kind of
+[=data processing=], is a [=person=] who may be unable
+to exercise sufficient self-determination. Amongst other things, they should be treated with greater default
 privacy protections and may be considered unable to [=consent=] to the [=processing=].
 People can be vulnerable for different reasons, for example because they are children,
 are employees with respect to their employers, are facing a steep asymmetry of power,
