add references and Christine's suggestion

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
           href: 'https://www.theregister.com/2018/05/01/publishers_slam_google_ad_policy_gdpr_consent/',
           publisher: 'The Register',
         },
+        'CONVENTION-108': {
+          title: 'Convention for the Protection of Individuals with regard to Automatic Processing of Personal Data',
+          href: 'https://rm.coe.int/1680078b37',
+          publisher: 'Council of Europe',
+        },
         'DARK-PATTERNS': {
           title: 'Dark patterns: past, present, and future',
           authors: ['Arvind Narayanan', 'Arunesh Mathur', 'Marshini Chetty', 'Mihir Kshirsagar'],
@@ -127,6 +132,11 @@
           title: 'Privacy by Design',
           href: 'https://conversationalist.org/2019/09/13/feminism-explains-our-toxic-relationships-with-our-smartphones/',
           publisher: 'Office of the Information and Privacy Commissioner, Ontario',
+        },
+        'OECD-GUIDELINES': {
+          title: 'OECD Guidelines on the Protection of Privacy and Transborder Flows of Personal Data',
+          href: 'https://www.oecd.org/sti/ieconomy/oecdguidelinesontheprotectionofprivacyandtransborderflowsofpersonaldata.htm',
+          publisher: 'OECD',
         },
         'PHONE-ON-FEMINISM': {
           title: 'This is your phone on feminism',
@@ -294,7 +304,8 @@ reminder of their humanity. When we use the term [=user=], it is to talk about t
 who happens to be using a given system at that time.
 
 We define <dfn data-lt="data">personal data</dfn> as any information about a [=person=],
-identified or identifiable, directly or indirectly, in particular by reference to an [=identifier=].
+identified or identifiable, directly or indirectly, in particular by reference to an [=identifier=]
+([[GDPR]], [[OECD-GUIDELINES]], [[CONVENTION-108]]).
 
 [=Data=] is personal if this [=person=] could reasonably be reidentified from a conjunction of this
 data with other data.
@@ -326,7 +337,8 @@ This is more difficult when the [=pseudonymous data=] is shared between several 
 cases, typical controls would include making sure that
 
 * the [=identifiers=] used in the [=data=] are under the direct and exclusive control of
-  the [=first party=];
+  the [=first party=] who is prevented by strict controls from matching the identifiers with the
+  data;
 
 * when these [=identifiers=] are shared with a [=third party=], they are made unique
   to that [=third party=] such that if they are shared with more than one
