--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ reminder of their humanity. When we use the term [=user=], it is to talk about t
 who happens to be using a given system at that time.
 
 We define <dfn data-lt="data">personal data</dfn> as any information about a [=person=],
-identified or identifiable, directly or indirectly, in particular by reference to an [=identifier=]
+identified or identifiable, directly or indirectly, such as by reference to an [=identifier=]
 ([[GDPR]], [[OECD-GUIDELINES]], [[CONVENTION-108]]).
 
 [=Data=] is personal if this [=person=] could reasonably be reidentified from a conjunction of this
