--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ identified or identifiable, directly or indirectly, such as by reference to an [
 [=Data=] is personal if this [=person=] could reasonably be reidentified from a conjunction of this
 data with other data.
 
-Data is <dfn>permanently de-identified</dfn> when there exists a high level of confidence
+Data is <dfn>de-identified</dfn> when there exists a high level of confidence
 that no [=person=] described by the data can be identified, directly or indirectly
 (e.g. via association with an [=identifier=], user agent, or device), by that data alone or in
 combination with other available information, including as being part of a group. Note
@@ -399,9 +399,8 @@ A <dfn>service provider</dfn> or <dfn>data processor</dfn> is considered to be t
 * may determine implementation details of the data processing in question but
   does not determine the [=purpose=] for which the data is being [=processed=]
   nor the overarching [=means=] through which the [=purpose=] is carried out;
-* has no independent right to use the data other than in a [=permanently
-  de-identified=] form (e.g., for monitoring service integrity, load balancing,
-  capacity planning, or billing); and,
+* has no independent right to use the data other than in a [=de-identified=] form (e.g., for
+  monitoring service integrity, load balancing, capacity planning, or billing); and,
 * has a contract in place with the [=party=] which is consistent with the above limitations.
 
 A <dfn>data controller</dfn> is a [=party=] that determines the [=means=] and [=purposes=]
@@ -809,7 +808,7 @@ What we consider is therefore not just the relation between the people who expos
 and the entities that invite that disclosure [[?RELATIONAL-TURN]], but also between the people
 who expose themselves and those who do not but may find themselves recognised as such indirectly
 anyway. One key understanding here is that such relations may persists even when data is
-[=permanently de-identified=].
+[=de-identified=].
 
 [=Legibility=] practices can be <dfn data-lt="legitimacy">legitimate</dfn> or
 <dfn data-lt="illegitimacy">illegitimate</dfn> depending
