break up sections

--- a/index.html
+++ b/index.html
@@ -296,12 +296,23 @@ This section provides a number of building blocks to create a shared understandi
 privacy. Some of the definitions below build on top of the work in
 <em>Tracking Preference Expression (DNT)</em> [[tracking-dnt]].
 
-## People &amp; Data {#people-data}
+## People &amp; Data {#people}
 
 A <dfn data-lt="individual">person</dfn> (also <dfn>user</dfn> or <dfn>data subject</dfn>) is any natural
 person. Throughout this document, we primarily use [=person=] or [=people=] to refer to human beings, as a
 reminder of their humanity. When we use the term [=user=], it is to talk about the specific [=person=]
 who happens to be using a given system at that time.
+
+A <dfn data-lt="vulnerable">vulnerable person</dfn>, in the [=context=] of a specific kind of
+[=data processing=], is a [=person=] who may be unable
+to exercise sufficient self-determination. Amongst other things, they should be treated with greater default
+privacy protections and may be considered unable to [=consent=] to the [=processing=].
+People can be vulnerable for different reasons, for example because they are children,
+are employees with respect to their employers, are facing a steep asymmetry of power,
+are people in some situations of intellectual or psychological impairment, are
+refugees, etc.
+
+## Data {#data}
 
 We define <dfn data-lt="data">personal data</dfn> as any information about a [=person=],
 identified or identifiable, directly or indirectly, such as by reference to an [=identifier=]
@@ -360,15 +371,6 @@ cases, typical controls would include making sure that
 
 Note that [=pseudonymity=], on its own, is not sufficient to render [=data processing=]
 [=appropriate=].
-
-A <dfn data-lt="vulnerable">vulnerable person</dfn>, in the [=context=] of a specific kind of
-[=data processing=], is a [=person=] who may be unable
-to exercise sufficient self-determination. Amongst other things, they should be treated with greater default
-privacy protections and may be considered unable to [=consent=] to the [=processing=].
-People can be vulnerable for different reasons, for example because they are children,
-are employees with respect to their employers, are facing a steep asymmetry of power,
-are people in some situations of intellectual or psychological impairment, are
-refugees, etc.
 
 ## The Parties {#parties}
 
