remove comments and group

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ data with other data.
 Data is <dfn>de-identified</dfn> when there exists a high level of confidence
 that no [=person=] described by the data can be identified, directly or indirectly
 (e.g. via association with an [=identifier=], user agent, or device), by that data alone or in
-combination with other available information, including as being part of a group. Note
+combination with other available information. Note
 that further considerations relating to groups are covered in the
 <a href="#collective">Collective Issues in Privacy</a> section.
 
@@ -822,25 +822,6 @@ following methods subject to public scrutiny and [=governance=] models with stro
 balances (such as a newspaper's editorial decisions), then it will enhance personal [=autonomy=]
 and tend to be [=legitimate=]. When it is done in the [=person=]'s stead and without [=governance=],
 it decreases personal [=autonomy=] and tends to be [=illegitimate=].
-
-<!--
-XXX this needs a better formulation
-* the data pertains to a group of people such that a [=person=] may find
-  themselves to be the subject of a treatment related to this group, even if the
-  entity carrying out the treatment has no way to identify that [=person=].
-
-We also need to surface surveillance vs capture -> industrialisation of society -> origin sovereignty
-as the primary line of defence against collective privacy harms from capture/enclosure/control
--->
-
-<!--
-<p>
-From an economics standpoint, it is important to note that the broad sharing of data can lead
-to anticompetitive outcomes, notably due to network effects stemming from processing data across
-multiple [=contexts=] [[?BIG-DATA-COMPETITION]]. Restricting flows of [=data=] between
-different [=contexts=] (and not just [=parties=]) is therefore likely to improve competition.
-</p>
--->
 
 <dfn data-lt="governance">Data governance</dfn> refers to the rules and processes for how [=data=] is
 [=processed=] in any given [=context=]. How data is <em>governed</em> describes who has
