--- a/index.html
+++ b/index.html
@@ -479,13 +479,12 @@ collected and the context in which it is used.
 
 <div class="example">
 
-Your cute little pup uses <em>Poodle Naps</em> to find comfortable places to snooze,
-and <em>Poodle Fetch</em> to locate the best sticks. Napping and fetching are different
-[=contexts=] with different norms, and sharing data between these contexts is a
-[=privacy violation=] if data shared between napping and fetching is used in a way that
-violates either the napping or fetching norms. That's true even though <em>Naps</em> and
-<em>Fetch</em> are both owned by the <em>Poodle</em> conglomerate, and even if the data
-use follows the norms of just one of the contexts.
+You share personal data with your bank in the context of managing your money. They would like to
+re-use that data in order to sell you another product, but marketing is a different [=context=] from
+banking, so using your data in this way is usually a [=privacy violation=].
+
+In some cases, the other product might solve a money management problem, and even be the fiduciarily
+correct thing to recommend. In those cases, the data use could be [=appropriate=].
 
 </div>
 
