Give the example an id.

--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@ enough that [=people=] would interact with it for more than one [=purpose=]. [=S
 use of that data follows the [=norms=] of both the context in which the data was
 collected and the context in which it is used.
 
-<div class="example">
+<div class="example" id="data-sharing-example">
 
 You share personal data with your bank in the context of managing your money. They would like to
 re-use that data in order to sell you another product, but marketing is a different [=context=] from
