make the pseud details more clearly an example

--- a/index.html
+++ b/index.html
@@ -339,7 +339,8 @@ viable degree of oversight and accountability such that technical and procedural
 the maintenance of pseudonymity are preserved.
 
 This is more difficult when the [=pseudonymous data=] is shared between several [=parties=]. In such
-cases, typical controls would include making sure that
+cases, good examples of typical controls that are representative of best practices would include
+making sure that:
 
 * the [=identifiers=] used in the [=data=] are under the direct and exclusive control of
   the [=first party=] who is prevented by strict controls from matching the identifiers with the
