--- a/index.html
+++ b/index.html
@@ -322,23 +322,22 @@ combination with other available information. Note
 that further considerations relating to groups are covered in the
 <a href="#collective">Collective Issues in Privacy</a> section.
 
-Data is <dfn data-lt="pseudonymous data|pseudonymity">pseudonymous</dfn> when there are
-strict controls that prevent the re-identification of [=people=] described by the data
-except for a well-defined set of [=purposes=].
+We talk of <dfn>controlled de-identified data</dfn> when there are strict controls that prevent the
+re-identification of [=people=] described by the data except for a well-defined set of [=purposes=].
 
-Different situations involving [=pseudonymous data=] will require different controls. For instance,
-if the [=pseudonymous data=] is <em>only</em> being processed by one [=party=], typical controls
+Different situations involving [=controlled de-identified data=] will require different controls. For instance,
+if the [=controlled de-identified data=] is <em>only</em> being processed by one [=party=], typical controls
 include making sure that the [=identifiers=] used in the data are unique to that dataset, that
 any person (e.g. an employee of the [=party=]) with access to the [=data=] is barred (e.g. based on
 legal terms) from sharing the [=data=] further, and that technical measures exist to prevent
 re-identification or the joining of different data sets involving this [=data=], notably against
 timing or k-anonymity attacks.
 
-In general, the goal is to ensure that [=pseudonymous data=] is used in a manner that provides a
+In general, the goal is to ensure that [=controlled de-identified data=] is used in a manner that provides a
 viable degree of oversight and accountability such that technical and procedural means to guarantee
 the maintenance of pseudonymity are preserved.
 
-This is more difficult when the [=pseudonymous data=] is shared between several [=parties=]. In such
+This is more difficult when the [=controlled de-identified data=] is shared between several [=parties=]. In such
 cases, good examples of typical controls that are representative of best practices would include
 making sure that:
 
@@ -364,7 +363,7 @@ making sure that:
 * there exist contractual terms between the [=first party=] and [=third party=]
   describing the limited [=purpose=] for which the data is being shared.
 
-Note that [=pseudonymity=], on its own, is not sufficient to render [=data processing=]
+Note that [=controlled de-identified data=], on its own, is not sufficient to render [=data processing=]
 [=appropriate=].
 
 # The Parties {#parties}
