--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@ We define <dfn data-lt="data">personal data</dfn> as any information about a [=p
 identified or identifiable, directly or indirectly, such as by reference to an [=identifier=]
 ([[GDPR]], [[OECD-GUIDELINES]], [[CONVENTION-108]]).
 
-[=Data=] is personal if this [=person=] could reasonably be reidentified from a conjunction of this
-data with other data.
+If a [=person=] could reasonably be identified or re-identified when [=data=] is combined with other
+[=data=], then that makes that data [=personal data=].
 
 Data is <dfn>de-identified</dfn> when there exists a high level of confidence
 that no [=person=] described by the data can be identified, directly or indirectly
