Rewrite the example again, to be clearer which parts are supposed to be cross-context sharing.

--- a/index.html
+++ b/index.html
@@ -480,11 +480,12 @@ collected and the context in which it is used.
 <div class="example" id="data-sharing-example">
 
 You share personal data with your bank in the context of managing your money. They would like to
-re-use that data in order to sell you another product, but marketing is a different [=context=] from
-banking, so using your data in this way is usually a [=privacy violation=].
+re-use that data in order to help another merchant sell you a product based on the purchase history
+the bank can see. Since marketing is a different [=context=] from banking, using your data in this
+way is usually a [=privacy violation=].
 
-In some cases, the other product might solve a money management problem, and even be the fiduciarily
-correct thing to recommend. In those cases, the data use could be [=appropriate=].
+If instead the bank is recommending a product to help your financial affairs, this may be an
+[=appropriate=] use of data, or even a use within the original [=context=].
 
 </div>
 
