Reorder the definition of "personal data".
I found it hard to figure out which words the comma-based asides applied to.

--- a/index.html
+++ b/index.html
@@ -308,9 +308,9 @@ refugees, etc.
 
 # Data {#data}
 
-We define <dfn data-lt="data">personal data</dfn> as any information about a [=person=],
-identified or identifiable, directly or indirectly, such as by reference to an [=identifier=]
-([[GDPR]], [[OECD-GUIDELINES]], [[CONVENTION-108]]).
+We define <dfn data-lt="data">personal data</dfn> as any information that is directly or
+indirectly about an identified or identifiable [=person=], such as by reference to an
+[=identifier=] ([[GDPR]], [[OECD-GUIDELINES]], [[CONVENTION-108]]).
 
 If a [=person=] could reasonably be identified or re-identified when [=data=] is combined with other
 [=data=], then that makes that data [=personal data=].
