--- a/index.html
+++ b/index.html
@@ -402,7 +402,15 @@ A <dfn>service provider</dfn> or <dfn>data processor</dfn> is considered to be t
 A <dfn>data controller</dfn> is a [=party=] that determines the [=means=] and [=purposes=]
 of data processing. Any [=party=] that is not a [=service provider=] is a [=data controller=].
 
-## Acting on Data {#acting-on-data}
+The <dfn>Vegas Rule</dfn> is a simple implementation of privacy in which "<em>what happens with the
+[=first party=] stays with the [=first party=]</em>." Put differently, the [=Vegas Rule=] is followed
+when the [=first party=] is the only [=data controller=]. While the [=Vegas Rule=] is a good
+guideline, it's neither necessary nor sufficient for [=appropriate=] [=data processing=]. A [=first
+party=] that maintains exclusive access to a person's data can still [=process=] it
+[=inappropriately=], and there are cases where a third party can learn information about a person
+but still treat it [=appropriately=].
+
+# Acting on Data {#acting-on-data}
 
 A [=party=] <dfn data-lt="process|processing|processed|data processing">processes</dfn> data if it
 carries out operations on [=personal data=], whether or not by automated means, such as
@@ -711,7 +719,8 @@ three privacy tiers:
     and the [=processing=] that a [=person=] can expect without having triggered any
     mechanisms to change their preferences. The exact details for this tier require clear
     definition, including aspects such as data retention, but [=data=] would have to be
-    systematically siloed by [=context=] (<em>not</em> just by [=party=]). This default tier
+    systematically siloed by [=context=] (<em>not</em> by [=party=], making it stricter than
+    the [=Vegas Rule=] and more in line with respecting [=privacy=]). This default tier
     should also be defined differently for certain kinds of [=contexts=]. The legitimate
     [=processing=] that can take place in this tier derives its legitimacy from matching the
     expectations and interests of both the [=person=] and the [=first party=] they're interacting with
